--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,3 @@
-blas==1.0
-bzip2==1.0.8
-ca-certificates==2024.9.24
-cairo==1.16.0
-eigen==3.4.0
-expat==2.6.3
-fontconfig==2.14.1
-freetype==2.12.1
-glib==2.78.4
-glib-tools==2.78.4
-graphite2==1.3.14
-gst-plugins-base==1.22.3
-gstreamer==1.22.3
-harfbuzz==4.3.0
-hdf5==1.12.1
-icc_rt==2022.1.0
-icu==73.1
-intel-openmp==2023.1.0
-jpeg==9e
-krb5==1.20.1
-lerc==3.0
-libabseil==20240116.2
-libclang==14.0.6
-libclang13==14.0.6
-libdeflate==1.17
-libffi==3.4.4
-libglib==2.78.4
-libiconv==1.16
-libogg==1.3.5
-libpng==1.6.39
-libpq==17.0
-libprotobuf==4.25.3
-libtiff==4.5.1
-libvorbis==1.3.7
-libwebp-base==1.3.2
-libxml2==2.13.5
-lz4-c==1.9.4
-mkl==2023.1.0
-mkl-service==2.4.0
-mkl_fft==1.3.11
-mkl_random==1.2.8
 numpy==1.26.4
-numpy-base==1.26.4
-opencv==4.10.0
-openjpeg==2.5.2
-openssl==3.0.15
-pcre2==10.42
-pip==24.2
-pixman==0.40.0
-python==3.10.12
-qt-main==5.15.2
-setuptools==75.1.0
-sqlite==3.45.3
-tbb==2021.8.0
-tk==8.6.14
-tzdata==2024b
-vc==14.40
-vs2015_runtime==14.40.33807
-wheel==0.44.0
-xz==5.4.6
-zlib==1.2.13
-zstd==1.5.6
+opencv-python==4.10.0.84
+matplotlib==3.9.2
