--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -10,10 +10,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.10"
 
       - name: Install Black
-        run: pip install black
+        run: pip install black==25.1.0
         
       - name: Run Black
         run: black --check --diff .
